--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.0",
+    "video.js": "^7.1.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
