--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "normalize.css": "^8.0.0",
     "video.js": "^7.1.0",
     "vue": "^2.5.17",
