--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
+    "imagesloaded": "^4.1.4",
+    "masonry-layout": "^4.2.2",
     "normalize.css": "^8.0.0",
     "video.js": "^7.1.0",
     "vue": "^2.5.17",
