--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "imagesloaded": "^4.1.4",
-    "masonry-layout": "^4.2.2",
+    "isotope-layout": "^3.0.6",
     "normalize.css": "^8.0.0",
     "video.js": "^7.1.0",
     "vue": "^2.5.17",
