--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.0",
     "video.js": "^7.1.0",
     "vue": "^2.5.17",
+    "vue-meta": "^1.5.8",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
